methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:6: error: ';' expected but 'else' found.
    else {gauche()}
    ^